correct benchmark results